*: run spotlessApply